# cloudmarket

auth/: .env  docker-compose.yaml  go.mod  go.sum  gqlgen.yml  server.go
auth/graph/: generated.go  resolver.go  schema.graphqls  schema.resolvers.go
auth/graph/config/: db.go
auth/graph/jwt/: jwt.go
auth/graph/middleware/: auth-middleware.go  auth.go
auth/graph/model/: converter.go  models_gen.go  user.go
auth/graph/repos/: repository.go
auth/graph/utils/: password.go
order/: .env  alembic.ini  docker-compose.yaml  requirements.txt
order/app/: database.py  main.py
order/app/core/: config.py
order/app/models/: order.py
order/app/routes/: order_router.py
order/app/schemas/: order.py
order/app/services/: order_svc.py  product_svc.py
product/: .env  Cargo.toml  diesel.toml  docker-compose.yaml  go.mod  go.sum  main.go
product/migrations/2025-09-23-130852-0000_create_products/: down.sql  up.sql
product/migrations/2025-09-24-072032-0000_create_products/: down.sql  up.sql
product/server/api/: category_api.go  product_api.go
product/server/cmd/: cmd.go
product/server/db/: conn.go  db.go  index.go
product/server/middleware/: logger.go
product/server/models/: category.go  product.go
product/server/repository/: repository.go
product/server/repository/store/: store_category.go  store_product.go
product/server/routes/: routes.go
product/server/service/category/: category.go
product/server/service/product/: product.go
product/server/utils/: helper.go
product/src/: api.rs  crud.rs  db.rs  lib.rs  main.rs  models.rs  schema.rs
(+1 files in other folders)
